1. Collection API Улучшения[#265807]